# docs/swagger.json
@@ -10,7 +10,7 @@
         },
         "version": "1.0"
     },
-    "host": "unifit.ust.hk:8889",
+    "host": "localhost:8889",
     "basePath": "/api/v2",
     "paths": {
         "/act/create": {
@@ -1895,14 +1895,10 @@
                 "banner_image": {
                     "type": "string"
                 },
-                "banner_image_signature": {
-                    "type": "string"
-                },
                 "logo_image": {
-                    "type": "string"
-                },
-                "logo_image_signature": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "https://unifit-1311571861.cos.ap-guangzhou.myqcloud.com/unifit/nft.jpg?q-sign-algorithm=sha1\u0026q-ak=AKIDRikVzB8oDKBm68tOcYDcka9RSDhurYx5\u0026q-sign-time=1656428492%3B1656432092\u0026q-key-time=1656428492%3B1656432092\u0026q-header-list=host\u0026q-url-param-list=\u0026q-signature=949835db0f086df54adc09d6e53dde318a74c2b6",
+                    "example": "https://unifit-1311571861.cos.ap-guangzhou.myqcloud.com/unifit/nft.jpg?q-sign-algorithm=sha1\u0026q-ak=AKIDRikVzB8oDKBm68tOcYDcka9RSDhurYx5\u0026q-sign-time=1656428492%3B1656432092\u0026q-key-time=1656428492%3B1656432092\u0026q-header-list=host\u0026q-url-param-list=\u0026q-signature=949835db0f086df54adc09d6e53dde318a74c2b6"
                 },
                 "organization": {
                     "type": "string",
